wwwroot/css/site.css
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}


.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 60px;
}

.navbar {
    background-image: url('/lib/img/Web_Banner.png'); /* Replace with the correct image path */
    background-size: cover; /* Ensures the image covers the navbar */
    background-position: center; /* Centers the image in the navbar */
    background-repeat: no-repeat; /* Prevents the image from repeating */
    color: black;
    padding: 30px 0;
    text-align: center;
    width: 100%;
}


.footer {
    background-color: #0f0c49;
    color: #fff;
    padding: 10px 0;
    text-align: center;
    width: 100%;
    position: fixed;
    bottom: 0;
}

/*#svgContainer {
    width: 100%;
    overflow: auto;*/ /* Allows scrolling if the content overflows */
    /*box-sizing: border-box;*/ /* Ensure padding is included in width */
/*}*/

#containerWrapper {
    display: flex;
    margin-top: 10px;
    gap: 20px; /* Space between the result and svg containers */
}

#resultContainer {
    flex: 0 0 20%; /* Fixed 30% width, does not grow or shrink */
    background-color: #f0f0f0; /* Optional: light background */
    padding: 10px;
    border: 1px solid #ddd; /* Optional: border for clarity */
    overflow-y: auto; /* Scroll if content overflows */
    max-height: 500px; /* Maximum height for scrolling */
}

#svgContainer {
    flex: 1; /* Takes up remaining space */
    background-color: #fff; /* Optional: white background */
    padding: 10px;
    border: 1px solid #ddd; /* Optional: border for clarity */
    overflow: auto; /* Enable scrolling if content overflows */
    min-height: 500px; /* Ensure a minimum height for better display */
}

